Fix hover cutoff in width

--- a/accordion/accordion.css
+++ b/accordion/accordion.css
@@ -48,7 +48,6 @@
 }
 
 .accordion .section-title {
-  width: 100%;
   padding: 8px;
   border-radius: 0.3rem;
   transition: transform 0.2s ease 0s;
